...
          store: $store,
          placeholder: placeholder,
          contentSizeThatFits: $contentSizeThatFits,
          messageEditorHeight: messageEditorHeight
        )

        SendButton(store: store)
      }
      .padding(.grid(1))
      .background(Color.backgroundPrimary)
      .clipShape(RoundedRectangle(cornerRadius: 23))
      .overlay(
        RoundedRectangle(cornerRadius: 23)
...
